--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div id="code">
                       <span class="say"> Happiest Birthday  </span><br>
                       <span class="say">My Beautiful🫀 </span><br>             
-                      <span class="say">Your friendship means the world to me, bestie.</span><br>
+                      <span class="say">Your means the world to me,❤️❤️.</span><br>
                       <span class="say"> Happy bday. 🥳</span><br>
                       <span class="say">💕</span><br>
                       <span class="say">Your Jatin </span><br>
